2006-01-16  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: Edit on doublecklick; only right click gives
	optionsmenu; Colors similar to tango icons
	
2006-01-16  Don Allingham  <don@gramps-project.org>
	* src/gramps.glade: reposition add/delete buttons, remove separator
	between parents and relationship info

2006-01-16 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
       * src/ObjectSelector/_Factories.py: refactored object frame
       * src/ObjectSelector/_FamilyFrame.py: refactored object frame
       * src/ObjectSelector/_ObjectFrameBase.py: refactored object frame
       * src/ObjectSelector/_ObjectSelectorWindow.py: refactored object frame
       * src/ObjectSelector/_PersonFilterFrame.py: refactored object frame
       * src/ObjectSelector/_PersonFrame.py: refactored object frame
       * src/ObjectSelector/_PersonSearchCriteriaWidget.py: renamed file


2006-01-14  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: add button control class
	* src/EditFamily.py: add icons
	* src/DisplayTabs.py: fix double click
	* src/EditFamily.py: fix double click
	* src/GrampsWidgets.py: add SimpleButton
	* src/ToolTips.py: Family tool tip

2006-01-14 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
       * src/ObjectSelector/_Constants.py: enums
       * src/ObjectSelector/_Factories.py: multi object type factories
       * src/ObjectSelector/_FamilyFilterFrame.py: family support 
       * src/ObjectSelector/_FamilyPreviewFrame.py: family support 
       * src/ObjectSelector/_FamilyTreeFrame.py: family support 
       * src/ObjectSelector/_PersonTreeFrame.py: separated out person tree
       * src/ObjectSelector/_ObjectSelectorWindow.py: implemented view switching
       * src/ObjectSelector/_PersonPreviewFrame.py: implemented view switching
       * src/ObjectSelector/_PersonSearchCriteriaWidget.py: implemented view switching
	
2006-01-14  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: fix scrolled window